# AlphaRatio-Scanner

./: .env.example  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  README.md  ROADMAP.md  SECURITY.md  config.example.yaml  docker-compose.yml  main.py  pyproject.toml  requirements.txt
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
conductor/: docs-plan.md  plan.md
docs/: AI Engineering Guidelines.md  configuration.md  deployment.md  extensibility.md  performance.md  project-standards.md  release-checklist.md  scanner-rules.md  setup.md  system-specification.md  testing.md  troubleshooting.md
scripts/: README.md  backfill_missing.py  import_ohlc_csv.py  populate_config.py  seed_database.py
src/: alert_engine.py  config_loader.py  database.py  indicator_engine.py  levels_engine.py  models.py  ranking_engine.py  ratio_engine.py  resampler.py  snapshot_manager.py  telegram_bot.py  utils.py  watchlist_engine.py
src/config/: __init__.py  models.py
tests/: conftest.py  test_ratio_engine.py
ticker details/: ticker details.ods
