[project]
name = "ratio-scanner"
version = "1.0.0"
description = "Relative Strength Leadership Scanner for Indian Equities"
authors = [
    {name = "coderkrp", email = "krp.sign.up@gmail.com"},
]
dependencies = [
    "pandas>=2.2.0",
    "numpy>=1.26.0",
    "SQLAlchemy>=2.0.0",
    "PyYAML>=6.0.1",
    "yfinance>=0.2.37",
    "pandas-ta>=0.3.14b0",
    "httpx>=0.27.0",
]
requires-python = ">=3.12"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.4.4",
    "pre-commit>=3.7.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "C",  # flake8-comprehensions
    "B",  # flake8-bugbear
]
ignore = [
    "E501",  # line too long, handled by formatter
]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra -q --cov=src"
testpaths = [
    "tests",
]
asyncio_mode = "auto"
